ffi/include/kawaiifi.h

typedef struct Interface Interface;
typedef struct Bss Bss;
/**
 * FFI-safe equivalent of kawaiifi::ChannelWidth.
 */
typedef enum ChannelWidth {
  CHANNEL_WIDTH_TWENTY_MHZ,
  CHANNEL_WIDTH_FORTY_MHZ,
  CHANNEL_WIDTH_EIGHTY_MHZ,
  CHANNEL_WIDTH_EIGHTY_PLUS_EIGHTY_MHZ,
  CHANNEL_WIDTH_ONE_SIXTY_MHZ,
  CHANNEL_WIDTH_THREE_HUNDRED_TWENTY_MHZ,
  CHANNEL_WIDTH_UNKNOWN,
} ChannelWidth;
/**
 * Frees a string returned by any kawaiifi function.
 */
void kawaiifi_string_free(char *s);
/**
 * Returns true if the BSS information came from a probe response, or false if from a beacon or if `bss` is null.
 */
bool kawaiifi_bss_is_from_probe_response(const struct Bss *bss);
/**
 * Returns a borrowed pointer to the 6-byte parent BSSID, or null if unavailable or `bss` is null.
 * The pointer is valid for the lifetime of the BSS. Do NOT free it.
 */
const uint8_t *kawaiifi_bss_parent_bssid(const struct Bss *bss);
/**
 * Writes the TSF timer value of the transmitting BSS into `out`. Returns false if unavailable or `bss` is null.
 */
bool kawaiifi_bss_parent_tsf(const struct Bss *bss,
                             uint64_t *out);
/**
 * Writes the TSF timer value from the last beacon into `out`. Returns false if unavailable or `bss` is null.
 */
bool kawaiifi_bss_beacon_tsf(const struct Bss *bss,
                             uint64_t *out);
/**
 * Writes the frequency offset of the BSS in kHz into `out`. Returns false if unavailable or `bss` is null.
 */
bool kawaiifi_bss_frequency_offset_khz(const struct Bss *bss,
                                       uint32_t *out);
/**
 * Writes the signal strength as a percentage (0–100) into `out`. Returns false if unavailable or `bss` is null.
 */
bool kawaiifi_bss_signal_percent(const struct Bss *bss,
                                 uint8_t *out);
/**
 * Writes the time the BSS was last seen as nanoseconds since boot into `out`.
 * Returns false if unavailable or `bss` is null.
 */
bool kawaiifi_bss_last_seen_boottime_ns(const struct Bss *bss, uint64_t *out);
/**
 * Writes the number of milliseconds since the BSS was last seen into `out`.
 * Returns false if unavailable or `bss` is null.
 */
bool kawaiifi_bss_seen_ms_ago(const struct Bss *bss, uint32_t *out);
/**
 * Writes the Multi-Link Operation (MLO) link ID into `out`. Returns false if unavailable or `bss` is null.
 */
bool kawaiifi_bss_mlo_link_id(const struct Bss *bss,
                              uint8_t *out);
/**
 * Returns a borrowed pointer to the 6-byte MLD address, or null if unavailable or `bss` is null.
 * The pointer is valid for the lifetime of the BSS. Do NOT free it.
 */
const uint8_t *kawaiifi_bss_mld_address(const struct Bss *bss);
/**
 * Returns the interface name as a C string, or null if `interface` is null.
 * The caller must free the returned string with `kawaiifi_string_free`.
 */
char *kawaiifi_interface_name(const struct Interface *interface);
/**
 * Returns the kernel interface index (ifindex), or 0 if `interface` is null.
 */
uint32_t kawaiifi_interface_index(const struct Interface *interface);
/**
 * Returns the wiphy index of the physical radio this interface belongs to, or 0 if `interface` is null.
 */
uint32_t kawaiifi_interface_wiphy(const struct Interface *interface);
/**
 * Returns the wireless device identifier (wdev), or 0 if `interface` is null.
 */
uint64_t kawaiifi_interface_wdev(const struct Interface *interface);
/**
 * Writes the 6-byte MAC address into `out`. Does nothing if either argument is null.
 */
void kawaiifi_interface_mac_address(const struct Interface *interface, uint8_t *out);
/**
 * Returns the netlink generation counter for this interface, or 0 if `interface` is null.
 */
uint32_t kawaiifi_interface_generation(const struct Interface *interface);
/**
 * Returns true if the interface is operating in 4-address (WDS) mode, or false if `interface` is null.
 */
bool kawaiifi_interface_four_address(const struct Interface *interface);
/**
 * Returns the SSID as a C string, or null if not associated or `interface` is null.
 * The caller must free the returned string with `kawaiifi_string_free`.
 */
char *kawaiifi_interface_ssid(const struct Interface *interface);
/**
 * Writes the current operating frequency of the radio in MHz into `out`.
 * Returns false if unavailable or `interface` is null.
 */
bool kawaiifi_interface_wiphy_freq_mhz(const struct Interface *interface, uint32_t *out);
/**
 * Writes the frequency offset of the radio in kHz into `out`.
 * Returns false if unavailable or `interface` is null.
 */
bool kawaiifi_interface_wiphy_freq_offset_khz(const struct Interface *interface, uint32_t *out);
/**
 * Writes the transmit power level in mBm (100 * dBm) into `out`.
 * Returns false if unavailable or `interface` is null.
 */
bool kawaiifi_interface_wiphy_tx_power_level_mbm(const struct Interface *interface, uint32_t *out);
/**
 * Writes the primary center frequency in MHz into `out`.
 * Returns false if unavailable or `interface` is null.
 */
bool kawaiifi_interface_center_freq_1_mhz(const struct Interface *interface, uint32_t *out);
/**
 * Writes the secondary center frequency in MHz into `out` (used for 80+80 MHz channels).
 * Returns false if unavailable or `interface` is null.
 */
bool kawaiifi_interface_center_freq_2_mhz(const struct Interface *interface, uint32_t *out);
/**
 * Writes the channel width into `out`. Returns false if unavailable or `interface` is null.
 */
bool kawaiifi_interface_channel_width(const struct Interface *interface, enum ChannelWidth *out);
/**
 * Writes the virtual interface radio mask into `out`. Returns false if unavailable or `interface` is null.
 */
bool kawaiifi_interface_vif_radio_mask(const struct Interface *interface,
                                       uint32_t *out);
/**
 * Writes the PCI/USB vendor ID into `out`. Returns false if unavailable or `interface` is null.
 */
bool kawaiifi_interface_vendor_id(const struct Interface *interface, uint16_t *out);
/**
 * Returns the BSD name of the Wi-Fi interface as a C string, or null if unavailable or `interface` is null.
 * The caller must free the returned string with `kawaiifi_string_free`.
 */
char *kawaiifi_interface_name(const struct Interface *interface);
/**
 * Returns the SSID as a C string, or null if unavailable, not associated, or `interface` is null.
 * The caller must free the returned string with `kawaiifi_string_free`.
 */
char *kawaiifi_interface_ssid(const struct Interface *interface);