ffi/include/NativeMethods.Linux.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace CsBindgen
{
    internal static unsafe partial class NativeMethods
    {






        /// <summary>
        ///  Returns true if the BSS information came from a probe response, or false if from a beacon or if `bss` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_is_from_probe_response", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_bss_is_from_probe_response(Bss* bss);

        /// <summary>
        ///  Returns a borrowed pointer to the 6-byte parent BSSID, or null if unavailable or `bss` is null.
        ///  The pointer is valid for the lifetime of the BSS. Do NOT free it.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_parent_bssid", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_bss_parent_bssid(Bss* bss);

        /// <summary>
        ///  Writes the TSF timer value of the transmitting BSS into `out`. Returns false if unavailable or `bss` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_parent_tsf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_bss_parent_tsf(Bss* bss, ulong* @out);

        /// <summary>
        ///  Writes the TSF timer value from the last beacon into `out`. Returns false if unavailable or `bss` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_beacon_tsf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_bss_beacon_tsf(Bss* bss, ulong* @out);

        /// <summary>
        ///  Writes the frequency offset of the BSS in kHz into `out`. Returns false if unavailable or `bss` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_frequency_offset_khz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_bss_frequency_offset_khz(Bss* bss, uint* @out);

        /// <summary>
        ///  Writes the signal strength as a percentage (0–100) into `out`. Returns false if unavailable or `bss` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_signal_percent", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_bss_signal_percent(Bss* bss, byte* @out);

        /// <summary>
        ///  Writes the time the BSS was last seen as nanoseconds since boot into `out`.
        ///  Returns false if unavailable or `bss` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_last_seen_boottime_ns", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_bss_last_seen_boottime_ns(Bss* bss, ulong* @out);

        /// <summary>
        ///  Writes the number of milliseconds since the BSS was last seen into `out`.
        ///  Returns false if unavailable or `bss` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_seen_ms_ago", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_bss_seen_ms_ago(Bss* bss, uint* @out);

        /// <summary>
        ///  Writes the Multi-Link Operation (MLO) link ID into `out`. Returns false if unavailable or `bss` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_mlo_link_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_bss_mlo_link_id(Bss* bss, byte* @out);

        /// <summary>
        ///  Returns a borrowed pointer to the 6-byte MLD address, or null if unavailable or `bss` is null.
        ///  The pointer is valid for the lifetime of the BSS. Do NOT free it.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_mld_address", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_bss_mld_address(Bss* bss);

        /// <summary>
        ///  Returns the interface name as a C string, or null if `interface` is null.
        ///  The caller must free the returned string with `kawaiifi_string_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_name", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_interface_name(Interface* @interface);

        /// <summary>
        ///  Returns the kernel interface index (ifindex), or 0 if `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_index", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern uint kawaiifi_interface_index(Interface* @interface);

        /// <summary>
        ///  Returns the wiphy index of the physical radio this interface belongs to, or 0 if `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_wiphy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern uint kawaiifi_interface_wiphy(Interface* @interface);

        /// <summary>
        ///  Returns the wireless device identifier (wdev), or 0 if `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_wdev", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong kawaiifi_interface_wdev(Interface* @interface);

        /// <summary>
        ///  Writes the 6-byte MAC address into `out`. Does nothing if either argument is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_mac_address", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void kawaiifi_interface_mac_address(Interface* @interface, byte* @out);

        /// <summary>
        ///  Returns the netlink generation counter for this interface, or 0 if `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_generation", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern uint kawaiifi_interface_generation(Interface* @interface);

        /// <summary>
        ///  Returns true if the interface is operating in 4-address (WDS) mode, or false if `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_four_address", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_interface_four_address(Interface* @interface);

        /// <summary>
        ///  Returns the SSID as a C string, or null if not associated or `interface` is null.
        ///  The caller must free the returned string with `kawaiifi_string_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_ssid", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_interface_ssid(Interface* @interface);

        /// <summary>
        ///  Writes the current operating frequency of the radio in MHz into `out`.
        ///  Returns false if unavailable or `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_wiphy_freq_mhz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_interface_wiphy_freq_mhz(Interface* @interface, uint* @out);

        /// <summary>
        ///  Writes the frequency offset of the radio in kHz into `out`.
        ///  Returns false if unavailable or `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_wiphy_freq_offset_khz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_interface_wiphy_freq_offset_khz(Interface* @interface, uint* @out);

        /// <summary>
        ///  Writes the transmit power level in mBm (100 * dBm) into `out`.
        ///  Returns false if unavailable or `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_wiphy_tx_power_level_mbm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_interface_wiphy_tx_power_level_mbm(Interface* @interface, uint* @out);

        /// <summary>
        ///  Writes the primary center frequency in MHz into `out`.
        ///  Returns false if unavailable or `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_center_freq_1_mhz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_interface_center_freq_1_mhz(Interface* @interface, uint* @out);

        /// <summary>
        ///  Writes the secondary center frequency in MHz into `out` (used for 80+80 MHz channels).
        ///  Returns false if unavailable or `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_center_freq_2_mhz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_interface_center_freq_2_mhz(Interface* @interface, uint* @out);

        /// <summary>
        ///  Writes the channel width into `out`. Returns false if unavailable or `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_channel_width", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_interface_channel_width(Interface* @interface, ChannelWidth* @out);

        /// <summary>
        ///  Writes the virtual interface radio mask into `out`. Returns false if unavailable or `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_vif_radio_mask", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_interface_vif_radio_mask(Interface* @interface, uint* @out);

        /// <summary>
        ///  Writes the PCI/USB vendor ID into `out`. Returns false if unavailable or `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_vendor_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_interface_vendor_id(Interface* @interface, ushort* @out);
